# opifex

./: README.md  pyproject.toml
src/opifex/: app.py
tests/: test_main.py
