[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opifex"
version = "1"
dependencies = []
requires-python = ">= 3.8"
authors = [
  {name = "Nico Coetzee", email = "nicc777@gmail.com"}
]
maintainers = [
  {name = "Nico Coetzee", email = "nicc777@gmail.com"}
]
description = "Converts YAML or JSON based manifests to 'opifex' objects."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/nicc777/opifex"
Documentation = "https://github.com/nicc777/opifex"
Repository = "https://github.com/nicc777/opifex"
Issues = "https://github.com/nicc777/opifex/issues"
Changelog = "https://raw.githubusercontent.com/nicc777/opifex/main/CHANGELOG.md"



[project.scripts]
spam-cli = "opifex:app"

[tool.setuptools.dynamic]
version = {attr = "package.__version__"}

